# azul-helper

./: .flake8  .gitignore  .pre-commit-config.yaml  DEPENDENCY_OPTIMIZATION.md  DEVELOPMENT.md  Makefile  OPTIMIZATION_SUMMARY.md  README.md  README_RL.md  README_TESTING.md  __init__.py  api_server.py  debug_game.py  debug_output.txt  find_api_port.py  index.html  monitor_throughput.py  mypy.ini  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_evaluation.py  start.py  vite.config.ts
.github/workflows/: ci.yml  pre-commit.yml
agents/: MCTS_IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  base_agent.py  checkpoint_agent.py  heuristic_agent.py  improved_heuristic_agent.py  mcts.py  minimax_agent.py  openspiel_agents.py  random_agent.py
azul-helper-extension/: .prettierignore  OPTIMIZATION.md  README.md  package.json  tailwind.config.js  test.html  tsconfig.json  vite.config.ts
azul-helper-extension/scripts/: generate-icons.js
azul-helper-extension/src/: background.ts  constants.ts  content.ts  manifest.json  popup.html  popup.ts  popup.tsx  styles.css  types.ts
azul-helper-extension/src/components/: AnalyzeButton.tsx  App.tsx  ErrorDisplay.tsx  GameState.tsx  MoveSuggestion.tsx  PlayerBoards.tsx  Settings.tsx  TileIcon.tsx
azul_rl/: .flake8  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Makefile  README.md  __init__.py  example_game.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
azul_rl/agents/: MCTS_IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  mcts.py
azul_rl/docs/: COLOR_VALIDATION_SUMMARY.md  NUMERICAL_STATE_SUMMARY.md  STATE_REPRESENTATION.md
azul_rl/examples/: README.md  demo_color_validation.py  demo_neural_network.py  demo_tile_counting.py  example_game.py  example_pettingzoo.py  mcts_example.py  self_play_training_example.py
azul_rl/game/: __init__.py  factory.py  game_state.py  pettingzoo_env.py  player_board.py  state_representation.py  tile.py
azul_rl/scripts/: lint_and_format.py  run_ci.sh
azul_rl/tests/: run_all_tests.py  test_basic_functionality.py  test_cross_platform.py  test_edge_cases.py  test_game_flow.py  test_legal_moves.py  test_mcts.py  test_neural_network.py  test_numerical_stability.py  test_official_rules_compliance.py  test_performance.py  test_pettingzoo_env.py  test_scoring.py  test_self_play_training.py  test_serialization.py  test_state_representation.py  test_tile_placement.py
azul_rl/training/: TRAINING_IMPLEMENTATION_SUMMARY.md  __init__.py  neural_network.py  replay_buffer.py  self_play.py  training_loop.py  training_utils.py
docs/: COLOR_VALIDATION_SUMMARY.md  NEURAL_NETWORK.md  NUMERICAL_STATE_SUMMARY.md  OPENSPIEL_MIGRATION.md  STATE_REPRESENTATION.md
evaluation/: README.md  __init__.py  agent_evaluator.py  baseline_agents.py  cli.py  evaluation_config.py  tournament.py  utils.py
evaluation_results/: tournament_demo_summary.txt
examples/: README.md  demo_color_validation.py  demo_neural_network.py  demo_tile_counting.py  evaluation_examples.py  example_game.py  example_pettingzoo.py  mcts_example.py  self_play_training_example.py  test_openspiel_integration.py
extension/: .prettierignore  AI_IMPROVEMENTS.md  OPTIMIZATION.md  README.md  eslint.config.js  oxc.config.js  package.json  tailwind.config.js  test.html  tsconfig.json  vite.config.ts
extension/scripts/: generate-icons.js
extension/src/: background.ts  constants.ts  content.ts  manifest.json  popup.html  popup.ts  popup.tsx  styles.css  types.ts
extension/src/components/: AnalyzeButton.tsx  App.tsx  ErrorDisplay.tsx  GameState.tsx  MoveSuggestion.tsx  PlayerBoards.tsx  (+2 more)
game/: __init__.py  azul_openspiel.py  factory.py  game_state.py  pettingzoo_env.py  player_board.py  register_azul.py  state_representation.py  tile.py
game_cpp/: .clang-format  .clangd  CMakeLists.txt  Makefile  README.md  action.cpp  action.h  agent_evaluator.cpp  agent_evaluator.h  agent_profiler.cpp  agent_profiler.h  alphazero_bridge.cpp  azul.cc  azul.h  azul_api_server.cpp  azul_cpp_wrapper.py  azul_openspiel.cpp  azul_openspiel.h  azul_test.cc  build.sh  debug_round.cpp  evaluation_config.cpp  evaluation_config.h  factory.cpp  factory.h  format_code.sh  game_state.cpp  game_state.h  libtorch_alphazero_training.cpp  main_evaluation_demo.cpp  main_profiling_demo.cpp  mcts_agent.cpp  mcts_agent.h  minimax_agent.cpp  minimax_agent.h  neural_mcts_training.cpp  player_board.cpp  player_board.h  plot_loss.py  pre-commit-hook.sh  (+16 more)
game_cpp/best_model_20250621/: config.json  vpnet.pb
profiling/: PROFILING_ANALYSIS.md  __init__.py  detailed_mcts_profiler.py  mcts_profiling_summary.md  openspiel_profiler.py  performance_profiler.py  profiling_results_small_1games.txt
public/: bga.html
scripts/: analyze_profiling_results.py  benchmark_mcts_optimization.py  lint_and_format.py  profile_self_play.py  run_all_tests.py  run_ci.sh  run_fast_tests.py  run_mypy.py  setup_python_alias.sh  test_gpu_profiling.py
src/: AI.ts  GameRenderer.ts  GameState.ts  PlayerBoard.ts  main.ts
static/: bga.html
tests/: run_all_tests.py  test_action_encoding.py  test_additional_edge_cases.py  test_basic_functionality.py  test_cross_platform.py  test_edge_cases.py  test_evaluation_framework.py  test_game_flow.py  test_legal_moves.py  test_mcts.py  test_mcts_optimizations.py  test_neural_network.py  test_numerical_stability.py  test_official_rules_compliance.py  test_performance.py  test_pettingzoo_env.py  test_scoring.py  test_self_play_training.py  test_serialization.py  test_state_representation.py  test_tile_placement.py  test_training_setup.py
training/: README.md  __init__.py  eta_tracker.py  full_training_run.py  monitor_dashboard.py  neural_network.py  openspiel_alphazero_training.py  replay_buffer.py  run_initial_training.py  self_play.py  test_training_setup.py  training_loop.py  training_utils.py
webapp/: .prettierignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
webapp/src/: AI.ts  ApiAI.ts  GameRenderer.ts  GameState.ts  PlayerBoard.ts  PythonAI.ts  main.ts  main.tsx  types.ts
(+24 files in other folders)
