[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "azul-rl"
version = "0.1.0"
description = "Azul board game implementation for reinforcement learning research"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Azul RL Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.21.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
# Only install these when specifically needed for RL development
rl = [
    "torch>=1.9.0",
    "gymnasium>=0.26.0",
    "stable-baselines3>=1.6.0",
]
# Essential development dependencies for CI
dev = [
    "pytest>=6.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "flake8-docstrings>=1.6.0",
    "isort>=5.10.0",
    "mypy>=0.950",
    "pre-commit>=2.15.0",
    "pytest-cov>=3.0.0",
    "psutil>=5.8.0",
]
# Only install these when specifically needed for visualization
viz = [
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "pandas>=1.3.0",
]
# Additional development tools (not needed for CI)
dev-extra = [
    "pytest-mock>=3.6.0",
    "flake8-import-order>=0.18.0",
    "flake8-bugbear>=22.0.0",
    "types-requests>=2.28.0",
    "types-setuptools>=57.4.0",
    "types-PyYAML>=6.0.0",
    "types-six>=1.16.0",
    "types-python-dateutil>=2.8.0",
    "types-pytz>=2021.3.0",
    "types-urllib3>=1.26.0",
]

[tool.setuptools]
packages = ["azul_rl", "azul_rl.game", "azul_rl.agents", "azul_rl.training", "azul_rl.utils", "azul_rl.tests"]

[tool.setuptools.package-dir]
"azul_rl" = "."
"azul_rl.game" = "game"
"azul_rl.agents" = "agents"
"azul_rl.training" = "training"
"azul_rl.utils" = "utils"
"azul_rl.tests" = "tests"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["azul_rl"]
known_third_party = ["numpy", "torch", "gymnasium", "stable_baselines3"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    "stable_baselines3.*",
    "gymnasium.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
